#247505 - fix for flickering of scrollbars

--- a/css/lightbox_alt.css
+++ b/css/lightbox_alt.css
@@ -25,6 +25,7 @@
   height: 250px;
   margin: 0 auto;
   min-width: 240px;
+  overflow: hidden;
 }
 
 #imageContainer {
